# Medium

./: README.md  requirements.txt
data-pipeline/: 1-synchronize_raw_data.py  3-tfrecord_generator.py  3-wb_dataset_generator.py  3-wb_dataset_generator_25116.py  3-wb_dataset_generator_classifier.py  ReadMe.md
data-pipeline/notebooks/: 1-synchronize_raw_data.ipynb  1b-merge-dataframes-posthoc.ipynb  3-tfrecord_generator.ipynb  4a-p2g_keras_testbed.ipynb  5a-train_p2g_rdm_keypoint_localization_network.ipynb  5b-train_p2g_raw_keypoint_localization_network.ipynb  5c-train_walabot_keypoint_localization_network.ipynb
data-pipeline/notebooks/models/: res_net.py
data-pipeline/utils/: hdf5_dataset.py  plotter.py  tf_records_generator.py
medium-ros/: README.md
medium-ros/medium/: CMakeLists.txt  package.xml
medium-ros/medium/launch/: demo.launch  record.launch  visualize.launch
medium-ros/medium_description/: CMakeLists.txt  package.xml
medium-ros/medium_description/launch/: description.launch
medium-ros/medium_description/urdf/: sensor_rag.xacro  spezi_box.xacro
medium-ros/medium_localizer/: CMakeLists.txt  package.xml  setup.py
medium-ros/medium_localizer/launch/: localizer.launch
medium-ros/medium_localizer/scripts/: Net_model.py  medium_localizer_node.py  model.py
medium-ros/medium_localizer/srv/: LocalizeKeypoints.srv
medium-ros/medium_visualizer/: CMakeLists.txt  package.xml  setup.py
medium-ros/medium_visualizer/rviz/: medium.rviz
medium-ros/medium_visualizer/scripts/: heatmaps.pkl  medium_visualizer_node.py  plotter.py  plotter_wlb.py
medium-ros/p2g-ros/: README.md
medium-ros/p2g-ros/p2g_ros_classifier/: CMakeLists.txt  package.xml  setup.py
medium-ros/p2g-ros/p2g_ros_classifier/launch/: p2g_with_pose.launch  pose_from_bag.launch
medium-ros/p2g-ros/p2g_ros_classifier/scripts/: classifier.h5  latest_class_labels.csv  latest_poseclassifier_weights.h5  latest_torso_localizer_weights.h5  pose_classifier_node.py
medium-ros/p2g-ros/p2g_ros_driver/: CHANGELOG.rst  CMakeLists.txt  package.xml
medium-ros/p2g-ros/p2g_ros_driver/cfg/: p2g.cfg
medium-ros/p2g-ros/p2g_ros_driver/include/p2g_ros_driver/: sensor.h  sync_manager.h
medium-ros/p2g-ros/p2g_ros_driver/launch/: p2g.launch  p2g_with_camera.launch
medium-ros/p2g-ros/p2g_ros_driver/src/: p2g_driver_node.cpp  p2g_sync_node.cpp
medium-ros/p2g-ros/p2g_ros_driver/src/lib/: sensor.cpp  sync_manager.cpp
medium-ros/p2g-ros/p2g_ros_markers/: CHANGELOG.rst  CMakeLists.txt  package.xml
medium-ros/p2g-ros/p2g_ros_markers/cfg/: P2GMarkers.cfg
medium-ros/p2g-ros/p2g_ros_markers/include/p2g_ros_markers/: plot.h
medium-ros/p2g-ros/p2g_ros_markers/launch/: p2g.launch  p2g_with_camera.launch
medium-ros/p2g-ros/p2g_ros_markers/rviz/: p2g.rviz  p2g_ros_markers.rviz  p2g_with_camera.rviz
medium-ros/p2g-ros/p2g_ros_markers/src/: p2g_markers_node.cpp
medium-ros/p2g-ros/p2g_ros_markers/src/lib/: plot.cpp
medium-ros/p2g-ros/p2g_ros_msgs/: CMakeLists.txt  package.xml
medium-ros/p2g-ros/p2g_ros_msgs/msg/: Antenna.msg  BaseScans.msg  Chirp.msg  P2GPoint.msg  P2GScan.msg  Sample.msg  Target.msg  TargetScans.msg
model-pipeline/: dataloader.py  training.py
model-pipeline/models/: MediumPoseNet.py  Net_model.py  model.pt
walabot/: README.md
walabot/scripts/: TargetsANDRawImage.py  recordImageSlices.ipynb  record_walabot.ipynb  walabot_init.py  walabot_recording.py
