<?xml version="1.0"?>
<package format="2">
  <name>medium_localizer</name>
  <version>0.0.0</version>
  <description>The medium_localizer package</description>

  <maintainer email="christopher.lang@tum.de">Christopher Lang</maintainer>

  <license>TODO</license>

  <!--   <doc_depend>doxygen</doc_depend> -->
  <buildtool_depend>catkin</buildtool_depend>

  <depend>std_msgs</depend>
  <depend> rospy</depend>
  <depend> message_generation</depend>
  <depend> message_runtime</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
