<?xml version="1.0"?>
<package format="2">
  <name>p2g_ros_driver</name>
  <version>0.9.2</version>
  <description>ROS device driver for communication with Position2Go eval board.</description>

  <maintainer email="christopher.lang@tum.de">Christopher Lang</maintainer>
  <author email="christopher.lang@tum.de">Christopher Lang</author>

  <license>BSD</license>
  <url type="website">TBD</url>
  <url type="repository">TBD</url>
  <url type="bugtracker">TBD</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>p2g_ros_msgs</depend>
  <depend>message_runtime</depend>
</package>
