<?xml version="1.0"?>
<package format="2">
  <name>p2g_ros_msgs</name>
  <version>0.0.1</version>
  <description>ROS message definitions for Position2Go eval board.</description>

  <maintainer email="christopher.lang@tum.de">Christopher Lang</maintainer>
  <author email="christopher.lang@tum.de">Christopher Lang</author>

  <license>BSD</license>
  <url type="website">TBD</url>
  <url type="repository">TBD</url>
  <url type="bugtracker">TBD</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <exec_depend>message_runtime</exec_depend>
  
</package>
